# benzy-Infotech-frappe-task

./: Procfile  README.md
config/: redis_cache.conf  redis_queue.conf
food_order/: README.md  pyproject.toml
food_order/food_order/: hooks.py
food_order/food_order/food_order/doctype/food_order/: food_order.js  food_order.json  food_order.py  test_food_order.py
food_order/food_order/food_order/report/employee_food_order_details/: employee_food_order_details.js  employee_food_order_details.json  employee_food_order_details.py
food_order/food_order/food_order/report/food_report/: food_report.json
logs/: database.log.2
sites/: apps.json  apps.txt  common_site_config.json
sites/assets/: assets-rtl.json  assets.json  erpnext  food_order  frappe
sites/food-order/: site_config.json  touched_tables.json
sites/food-order/logs/: database.log.1  database.log.3  database.log.4  database.log.5  database.log.6
sites/food-order/private/backups/: 20241221_000008-food-order-site_config_backup.json
